* sql_reliability: remove debugging prints, replace with more generally useful
  messages.

v3.2.0-RC18  2023-01-18
* Fix https://gitea.pep.foundation/pEp.foundation/pEpEngine/issues/90 : it is
  now possible to open multiple concurrent threads with a database logging
  destination.
  No user-visible changes, other than more reliability.
* Make SQL transactions robust by not assuming, incorrectly, that COMMIT
  TRANSACTION or ROLLBACK TRANSACTION never fail with SQLITE_BUSY or
  SQLITE_LOCKED inside an EXCLUSIVE tranaction.  This improves
  https://gitea.pep.foundation/pEp.foundation/pEpEngine/issues/104
  with a fix in the same spirit of
  https://gitea.pep.foundation/pEp.foundation/pEpEngine/issues/90 .
  Again ao user-visible changes, other than more reliability.

v3.2.0-RC17  2023-01-18
* general overhaul of concurrent SQL execution, adding loops with exponential
  backoff and exclusive transactions.  This should solve many concurrency
  problems (see src/sql_reliability.h ).
  This fixes https://gitea.pep.foundation/pEp.foundation/pEpEngine/issues/104 .
  Even if this is an important change there is no API change related to this
  functionality.

v3.2.0-RC16  2023-01-17
* rewrite some CPP macros working around problems (I indeed suspect a bug:
  macro expansion contained parentheses not in macro definitions) with
  microsoft's compiler.  Reported by Alex, who helped testing my proposed
  redefinitions.  The current code is meant to work on every platform.

v3.2.0-RC15  2023-01-13
* move state machine initialisation out for callback registering.  This avoids
  that Sync beacon messages are sent at session initialisation (thanks to Volker
  Birk).
* Echo protocol: implement a rate limit on Ping and Pong messages to each
  destination identity, from each device.  This prevents flooding with Ping or
  Pong messages.
* update pEpEngineSequoiaBackend dependency: this in its turn will use a more
  recent sequoia-openpgp, which fixes a performance bug.