@@ -355,6 +355,9 @@ struct _pEpSession {
        at initialisation. */
     bool log_database_initialised;
 
+    /* When this field is false do not log, to any destination. */
+    bool enable_log;
+
     /* Prepared SQL statements (on log_db) for logging.  See pEp_log.c . */
     sqlite3_stmt *log_begin_transaction_prepared_statement;
     sqlite3_stmt *log_commit_transaction_prepared_statement;
